# breedlog

./: .env.example  .gitignore  .replit  capacitor.config.json  capacitor.config.ts  package-lock.json  package.json  replit.md  replit.nix  tailwind.config.ts  vite.config.ts
.github/: BRANCH_PROTECTION.md
attached_assets/: BreedLog_One_Page_Family_Tree_Pedigree_Integration_Skill_1783332047193.md  Pasted-ADD-ON-REQUIREMENT-INDIVIDUAL-EWE-EXPORT-MUST-INCLUDE-A_1770031734416.txt  Pasted-AS-YOU-SUGGESTED-implement-the-PWA-approach-for-ME-righ_1769678019748.txt  Pasted-BREEDLOG-ACCESS-CODE-DEVICE-ACCESS-VERIFICATION-MANDATE_1776745125390.txt  Pasted-BREEDLOG-APP-ACTIVE-HERD-COUNT-LIGHT-DARK-BUTTON-READAB_1781616621221.txt  Pasted-BREEDLOG-BUILD-INSTRUCTION-BLOODLINE-PEDIGREES-GENETIC-_1782913612180.txt  Pasted-BREEDLOG-CONTROLLED-REPLIT-INSTRUCTION-TASKS-ONLY-1-Con_1777598659851.txt  Pasted-BREEDLOG-EXPORT-DOCUMENT-CORRECTION-STANDARDIZATION-AND_1781612565058.txt  Pasted-BREEDLOG-EXPORT-TASK-COMPLETION-VERIFICATION-AND-GAP-CL_1781614420589.txt  Pasted-BREEDLOG-FINAL-ADJUSTMENT-PATCH-HOMEPAGE-CARD-LINKING-R_1773473275058.txt  Pasted-BREEDLOG-FOLLOW-UP-INSTRUCTION-COMPLETE-AND-VERIFY-BLOO_1782913622000.txt  Pasted-BREEDLOG-IN-APP-HELP-ASK-BREEDLOG-KNOWLEDGE-BASE-FIELD-_1782397850624.txt  Pasted-BREEDLOG-INDIVIDUAL-ANIMAL-EXPORT-PERFORMANCE-DATASHEET_1782424527737.txt  Pasted-BREEDLOG-PATCH-BRIEF-Core-Logic-Repair-Herd-Classificat_1773437248201.txt  (+71 more)
client/: index.html  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/src/: lib.rs  main.rs
(+273 files in other folders)
