[package]
name = "breedlog-desktop"
version = "1.0.2"
description = "BreedLog Windows desktop shell"
authors = ["STITCH WORX"]
license = "Proprietary"
repository = "https://github.com/holgarkotze-commits/breedlog"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "breedlog_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3" }
tauri-plugin-log = "2"
